--- a/Content_Banner_3/index.html
+++ b/Content_Banner_3/index.html
@@ -13,7 +13,7 @@
     <main class="citrusX__wrapper">
         <!-- video section start -->
         <section class="citrusX__content-banner">
-            <h2 class="citrusX__sectionTitle">Video Content Banner</h2>
+            <!-- <h2 class="citrusX__sectionTitle">Video Content Banner</h2> -->
             <div class="citrusX__video">
                 <div class="citrusX__videoRow">
                     <div class="citrusX__videoCol order1">
